--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,14 @@ Flask-Assets==0.12
 Flask-Login==0.4.0
 flask-mongoengine==0.9.2
 Flask-WTF==0.14.2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 mongoengine==0.13.0
-nose==1.3.7
 packaging==16.8
 pymongo==3.4.0
 pyparsing==2.2.0
-selenium==3.4.1
 six==1.10.0
 webassets==0.12.1
 Werkzeug==0.12.1
